// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should mount with no items 1`] = `
<List
  isDivided={false}
>
  <ul
    className="list"
  />
</List>
`;

exports[`should mount with one items 1`] = `
<List
  isDivided={false}
>
  <ul
    className="list"
  >
    <ListItem
      isSelected={false}
    >
      <li
        className="list-item"
      />
    </ListItem>
  </ul>
</List>
`;

exports[`should render isDivided 1`] = `
<ul
  className="list divided"
>
  <ListItem
    isSelected={false}
  />
  <ListItem
    isSelected={false}
  />
  <ListItem
    isSelected={false}
  />
  <ListItem
    isSelected={false}
  />
  <ListItem
    isSelected={false}
  />
</ul>
`;

exports[`should render with items 1`] = `
<ul
  className="list"
>
  <ListItem
    isSelected={false}
  />
  <ListItem
    isSelected={false}
  />
  <ListItem
    isSelected={false}
  />
  <ListItem
    isSelected={false}
  />
  <ListItem
    isSelected={false}
  />
</ul>
`;
